<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_partidos"
        android:icon="@drawable/partidos"
        android:title="Partidos" />

    <item
        android:id="@+id/nav_reserva"
        android:icon="@drawable/reserva"
        android:title="@string/reservas" />

    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/perfil"
        android:title="@string/perfil" />

    <item
        android:id="@+id/nav_ajustes"
        android:icon="@drawable/settings"
        android:title="@string/item_ajustes" />
</menu>