<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgFondoLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/fondo" />

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="227dp"
        android:layout_height="177dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/usuario"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/principal"
        app:layout_constraintTop_toBottomOf="@id/logoLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contrase_a"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@color/principal"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/txtUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/esquinas_redondas"
        android:backgroundTint="@null"
        android:text="@string/iniciar_sesion"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/txtContraseña"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/boton_borde_redondeado"
        android:backgroundTint="@null"
        android:text="Crear cuenta"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imgButtonInsta"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/botones_media"
        android:contentDescription="Instagram"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/insta"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgButtonX"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <ImageButton
        android:id="@+id/imgButtonX"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/botones_media"
        android:contentDescription="X"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/x"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        app:layout_constraintStart_toEndOf="@id/imgButtonInsta"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtErrorLogin"
        android:layout_width="390dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="Error de nombre de usuario o contraseña"
        android:textColor="#D32F2F"
        android:visibility="gone"
        android:drawableStart="@drawable/advertencia"
        android:drawablePadding="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgFondoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.793" />

</androidx.constraintlayout.widget.ConstraintLayout>